Fixed nav issue on mobile
i think...

--- a/css/scaling.css
+++ b/css/scaling.css
@@ -35,7 +35,7 @@
  
     width: 200px;
     padding-top: 0px !important;
-    padding-left: 25px;
+  
 
     
 }
