--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,7 @@ h3 {
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
     color: rgb(30,30,30);
-    font-family: montserratsemi_bold;
+    font-family: 'montserratsemi_bold', sans-serif;
     background-color: transparent;
      /* switch to a lighter color for active element */
 }
@@ -334,7 +334,7 @@ div .footer-content {
 
    background:transparent; 
    position:relative; 
-   width:640px;
+   width:100%;
    height:480px; /* your iframe height */
    top:480px;  /* your iframe height */
    margin-top:-480px;  /* your iframe height */
